clases miercoles 12 junio

--- a/2-Data Analysis/6-Bases de datos/SQL/Practica/Northwind/Challenge.ipynb
+++ b/2-Data Analysis/6-Bases de datos/SQL/Practica/Northwind/Challenge.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,20 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "\n",
+    "import ibis\n",
+    "#con = ibis.pandas.connect()\n",
+    " \n",
+    "import ibis\n",
+    "#con = ibis.sqlite.connect()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Connect to the DB\n",
     "conn = sqlite3.connect(\"./data/northwind.db\")\n",
     "c = conn.cursor()\n",
@@ -59,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +95,7 @@
        " ('OrderDetails',)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -171,32 +185,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>18429</td>\n",
-       "      <td>2012-07-10 15:40:46</td>\n",
+       "      <td>10248</td>\n",
+       "      <td>1996-07-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>25506</td>\n",
-       "      <td>2012-07-10 20:28:57</td>\n",
+       "      <td>10249</td>\n",
+       "      <td>1996-07-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>26048</td>\n",
-       "      <td>2012-07-11 01:09:16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10250</td>\n",
+       "      <td>1996-07-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>16958</td>\n",
-       "      <td>2012-07-11 20:26:28</td>\n",
+       "      <td>10252</td>\n",
+       "      <td>1996-07-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>25877</td>\n",
-       "      <td>2012-07-11 21:17:36</td>\n",
+       "      <td>10253</td>\n",
+       "      <td>1996-07-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -205,58 +219,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15927</th>\n",
+       "      <th>155</th>\n",
        "      <td>1</td>\n",
-       "      <td>11298</td>\n",
-       "      <td>2023-10-25 13:00:29</td>\n",
+       "      <td>10438</td>\n",
+       "      <td>1997-02-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15928</th>\n",
+       "      <th>156</th>\n",
        "      <td>1</td>\n",
-       "      <td>23676</td>\n",
-       "      <td>2023-10-26 06:28:53</td>\n",
+       "      <td>10439</td>\n",
+       "      <td>1997-02-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15929</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13789</td>\n",
-       "      <td>2023-10-27 06:38:44</td>\n",
+       "      <th>157</th>\n",
+       "      <td>2</td>\n",
+       "      <td>10440</td>\n",
+       "      <td>1997-02-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15930</th>\n",
+       "      <th>158</th>\n",
        "      <td>1</td>\n",
-       "      <td>25677</td>\n",
-       "      <td>2023-10-27 18:17:38</td>\n",
+       "      <td>10442</td>\n",
+       "      <td>1997-02-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15931</th>\n",
+       "      <th>159</th>\n",
        "      <td>1</td>\n",
-       "      <td>13724</td>\n",
-       "      <td>2023-10-28 00:09:48</td>\n",
+       "      <td>10443</td>\n",
+       "      <td>1997-02-12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15932 rows × 3 columns</p>\n",
+       "<p>160 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       count(*)  OrderID            OrderDate\n",
-       "0             1    18429  2012-07-10 15:40:46\n",
-       "1             1    25506  2012-07-10 20:28:57\n",
-       "2             1    26048  2012-07-11 01:09:16\n",
-       "3             1    16958  2012-07-11 20:26:28\n",
-       "4             1    25877  2012-07-11 21:17:36\n",
-       "...         ...      ...                  ...\n",
-       "15927         1    11298  2023-10-25 13:00:29\n",
-       "15928         1    23676  2023-10-26 06:28:53\n",
-       "15929         1    13789  2023-10-27 06:38:44\n",
-       "15930         1    25677  2023-10-27 18:17:38\n",
-       "15931         1    13724  2023-10-28 00:09:48\n",
+       "     count(*)  OrderID   OrderDate\n",
+       "0           1    10248  1996-07-04\n",
+       "1           1    10249  1996-07-05\n",
+       "2           2    10250  1996-07-08\n",
+       "3           1    10252  1996-07-09\n",
+       "4           1    10253  1996-07-10\n",
+       "..        ...      ...         ...\n",
+       "155         1    10438  1997-02-06\n",
+       "156         1    10439  1997-02-07\n",
+       "157         2    10440  1997-02-10\n",
+       "158         1    10442  1997-02-11\n",
+       "159         1    10443  1997-02-12\n",
        "\n",
-       "[15932 rows x 3 columns]"
+       "[160 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +391,7 @@
        "2          3  Federal Shipping  (503) 555-9931"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,6 +445,15 @@
     "Analiza el desempeño de los productos de la empresa. Examina las ventas de productos por categoría, identificando los productos más vendidos y los menos vendidos. \n",
     "\n",
     "Pista: Utiliza gráficos de barras y de tarta para visualizar la participación de mercado de cada categoría y los ingresos generados por los productos individuales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# usa el ibis"
    ]
   },
   {
