--- a/2-Data Analysis/6-Bases de datos/SQL/Teoria/5-Bases de datos analíticas cloud.ipynb
+++ b/2-Data Analysis/6-Bases de datos/SQL/Teoria/5-Bases de datos analíticas cloud.ipynb
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1409,63 +1409,32 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting ibis-framework[pandas]\n",
-      "  Downloading ibis_framework-9.0.0-py3-none-any.whl.metadata (15 kB)\n",
-      "Collecting atpublic<5,>=2.3 (from ibis-framework[pandas])\n",
-      "  Downloading atpublic-4.1.0-py3-none-any.whl.metadata (1.8 kB)\n",
-      "Collecting bidict<1,>=0.22.1 (from ibis-framework[pandas])\n",
-      "  Downloading bidict-0.23.1-py3-none-any.whl.metadata (8.7 kB)\n",
-      "Requirement already satisfied: numpy<2,>=1.23.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (1.26.4)\n",
-      "Requirement already satisfied: packaging<25,>=21.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (23.1)\n",
-      "Requirement already satisfied: pandas<3,>=1.5.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (2.1.4)\n",
-      "Collecting parsy<3,>=2 (from ibis-framework[pandas])\n",
-      "  Downloading parsy-2.1-py3-none-any.whl.metadata (3.3 kB)\n",
-      "Requirement already satisfied: pyarrow<17,>=10.0.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (14.0.2)\n",
-      "Collecting pyarrow-hotfix<1,>=0.4 (from ibis-framework[pandas])\n",
-      "  Downloading pyarrow_hotfix-0.6-py3-none-any.whl.metadata (3.6 kB)\n",
-      "Requirement already satisfied: python-dateutil<3,>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2022.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (2023.3.post1)\n",
-      "Requirement already satisfied: regex>=2021.7.6 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (2023.10.3)\n",
-      "Requirement already satisfied: rich<14,>=12.4.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (13.3.5)\n",
-      "Collecting sqlglot<23.13,>=23.4 (from ibis-framework[pandas])\n",
-      "  Downloading sqlglot-23.12.2-py3-none-any.whl.metadata (18 kB)\n",
-      "Requirement already satisfied: toolz<1,>=0.11 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (0.12.0)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[pandas]) (4.9.0)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas<3,>=1.5.3->ibis-framework[pandas]) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil<3,>=2.8.2->ibis-framework[pandas]) (1.16.0)\n",
-      "Requirement already satisfied: markdown-it-py<3.0.0,>=2.2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from rich<14,>=12.4.4->ibis-framework[pandas]) (2.2.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from rich<14,>=12.4.4->ibis-framework[pandas]) (2.15.1)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from markdown-it-py<3.0.0,>=2.2.0->rich<14,>=12.4.4->ibis-framework[pandas]) (0.1.0)\n",
-      "Downloading atpublic-4.1.0-py3-none-any.whl (5.0 kB)\n",
-      "Downloading bidict-0.23.1-py3-none-any.whl (32 kB)\n",
-      "Downloading parsy-2.1-py3-none-any.whl (9.1 kB)\n",
-      "Downloading pyarrow_hotfix-0.6-py3-none-any.whl (7.9 kB)\n",
-      "Downloading sqlglot-23.12.2-py3-none-any.whl (390 kB)\n",
-      "   ---------------------------------------- 0.0/390.2 kB ? eta -:--:--\n",
-      "   ------- -------------------------------- 71.7/390.2 kB 1.3 MB/s eta 0:00:01\n",
-      "   --------------- ------------------------ 153.6/390.2 kB 1.5 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 286.7/390.2 kB 2.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 390.2/390.2 kB 2.0 MB/s eta 0:00:00\n",
-      "Downloading ibis_framework-9.0.0-py3-none-any.whl (1.8 MB)\n",
-      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.1/1.8 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------ --------------------------------- 0.3/1.8 MB 3.9 MB/s eta 0:00:01\n",
-      "   ----------- ---------------------------- 0.5/1.8 MB 3.5 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 0.7/1.8 MB 3.5 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 0.8/1.8 MB 3.6 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 1.0/1.8 MB 3.6 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 1.1/1.8 MB 3.5 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 1.4/1.8 MB 3.6 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 1.6/1.8 MB 3.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  1.8/1.8 MB 3.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.8/1.8 MB 3.6 MB/s eta 0:00:00\n",
-      "Installing collected packages: sqlglot, pyarrow-hotfix, parsy, bidict, atpublic, ibis-framework\n",
-      "Successfully installed atpublic-4.1.0 bidict-0.23.1 ibis-framework-9.0.0 parsy-2.1 pyarrow-hotfix-0.6 sqlglot-23.12.2\n"
+      "Requirement already satisfied: ibis-framework[sqlite] in c:\\users\\amejo\\appdata\\roaming\\python\\python311\\site-packages (9.0.0)\n",
+      "Requirement already satisfied: atpublic<5,>=2.3 in c:\\users\\amejo\\appdata\\roaming\\python\\python311\\site-packages (from ibis-framework[sqlite]) (4.1.0)\n",
+      "Requirement already satisfied: bidict<1,>=0.22.1 in c:\\users\\amejo\\appdata\\roaming\\python\\python311\\site-packages (from ibis-framework[sqlite]) (0.23.1)\n",
+      "Requirement already satisfied: numpy<2,>=1.23.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (1.26.4)\n",
+      "Requirement already satisfied: pandas<3,>=1.5.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (2.1.4)\n",
+      "Requirement already satisfied: parsy<3,>=2 in c:\\users\\amejo\\appdata\\roaming\\python\\python311\\site-packages (from ibis-framework[sqlite]) (2.1)\n",
+      "Requirement already satisfied: pyarrow<17,>=10.0.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (14.0.2)\n",
+      "Requirement already satisfied: pyarrow-hotfix<1,>=0.4 in c:\\users\\amejo\\appdata\\roaming\\python\\python311\\site-packages (from ibis-framework[sqlite]) (0.6)\n",
+      "Requirement already satisfied: python-dateutil<3,>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2022.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (2023.3.post1)\n",
+      "Requirement already satisfied: regex>=2021.7.6 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (2023.10.3)\n",
+      "Requirement already satisfied: rich<14,>=12.4.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (13.3.5)\n",
+      "Requirement already satisfied: sqlglot<23.13,>=23.4 in c:\\users\\amejo\\appdata\\roaming\\python\\python311\\site-packages (from ibis-framework[sqlite]) (23.12.2)\n",
+      "Requirement already satisfied: toolz<1,>=0.11 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (0.12.0)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from ibis-framework[sqlite]) (4.9.0)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas<3,>=1.5.3->ibis-framework[sqlite]) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil<3,>=2.8.2->ibis-framework[sqlite]) (1.16.0)\n",
+      "Requirement already satisfied: markdown-it-py<3.0.0,>=2.2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from rich<14,>=12.4.4->ibis-framework[sqlite]) (2.2.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from rich<14,>=12.4.4->ibis-framework[sqlite]) (2.15.1)\n",
+      "Requirement already satisfied: mdurl~=0.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from markdown-it-py<3.0.0,>=2.2.0->rich<14,>=12.4.4->ibis-framework[sqlite]) (0.1.0)\n"
      ]
     }
    ],
    "source": [
-    "#!pip install ibis-framework[pandas]"
+    "#!pip install ibis-framework[pandas]\n",
+    "#!pip install ibis-framework[sqlite]"
    ]
   },
   {
